@@ -4,6 +4,7 @@
 	window also when --constantshow is in effect, after a ^J Justify or
 	an invalid escape sequence, and when entering a verbatim keystroke.
 	Leave the cursor off during Unicode input, for extra feedback.
+	* src/browser.c (do_browser): Improve the wording of a message.
 
 2016-03-28  Benno Schulenberg  <bensberg@justemail.net>
 	* src/winio.c (statusbar): Don't bother putting back the cursor in
